more or less working, testing and feature cleanup next